styles/style.css
/* ... */
.about__person-name {
  font-size: clamp(14px, 1.667vw, 32px);
  line-height: 150%;
}

.about__facts {
  padding-left: 30px;
  display: flex;
  flex-direction: column;
  gap: 30px;
  list-style: disc;
}

.about__fact {
  padding-left: 10px;
  font-size: clamp(14px, 1.667vw, 32px);
  line-height: 150%;
}

.about__btn {
  margin-top: 80px;
  align-self: center;
  background: transparent;
  border: 1px solid var(--color-orange);
  font-family: var(--font-family);
  color: var(--color-orange);
}

.about__dot {
  position: absolute;
  bottom: -12px;
  left: 50%;
  transform: translateX(-50%);
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: var(--color-orange);
  outline: 20px solid var(--color-bg);
}

/* Stats */
.stats {
  position: relative;
  background:
    linear-gradient(0deg, rgba(25, 26, 24, 0.7), rgba(25, 26, 24, 0.7)),
    linear-gradient(
      178.88deg,
      #191a18 0.92%,
      rgba(25, 26, 24, 0) 49.96%,
      #191a18 99%
    ),
    url(../assets/images/main/stats-bg.jpg);
  background-size: cover;
  background-position: center;
  min-height: 500px;
  display: flex;
  align-items: center;
}

.stats__inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
}

.stats__wrapper {
  width: 100%;
  position: relative;
  z-index: 1;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto auto;
  align-content: center;
  column-gap: 10px;
  row-gap: 8px;
}

.stat__wrapper {
  display: contents;
}

.stat-number,
.stat-text {
  text-align: center;
  color: var(--color-white);
}

.stat__wrapper:nth-child(1) .stat-number {
  grid-column: 1;
  grid-row: 1;
}

.stat__wrapper:nth-child(2) .stat-number {
  grid-column: 2;
  grid-row: 1;
}

.stat__wrapper:nth-child(3) .stat-number {
  grid-column: 3;
  grid-row: 1;
}

.stat__wrapper:nth-child(1) .stat-text {
  grid-column: 1;
  grid-row: 2;
}

.stat__wrapper:nth-child(2) .stat-text {
  grid-column: 2;
  grid-row: 2;
}

.stat__wrapper:nth-child(3) .stat-text {
  grid-column: 3;
  grid-row: 2;
}

.stat-number {
  font-family: var(--font3);
  color: var(--color-orange);
  align-self: end;
}

.stat-text {
  font-size: 32px;
  line-height: 150%;
  max-width: 385px;
  margin: 0 auto;
  align-self: start;
}

@supports (grid-template-rows: subgrid) {
  .stat__wrapper {
    display: grid;
    grid-row: span 2;
    grid-template-rows: subgrid;
    align-items: start;
  }

  .stat__wrapper:nth-child(1) .stat-number,
  .stat__wrapper:nth-child(2) .stat-number,
  .stat__wrapper:nth-child(3) .stat-number,
  .stat__wrapper:nth-child(1) .stat-text,
  .stat__wrapper:nth-child(2) .stat-text,
  .stat__wrapper:nth-child(3) .stat-text {
    grid-column: unset;
    grid-row: unset;
  }
}

.btn-download {
  color: var(--color-white);
  border: 1px solid var(--color-white);
  font-family: var(--font-family);
}

/* Benefits */
.benefits {
  margin-top: 40px;
}

.benefits__title {
  margin-bottom: clamp(24px, 2.5vw, 40px);
}

.benefits__wrapper {
  display: flex;
  justify-content: center;
  gap: clamp(18px, 4vw, 87px);
}

.benefits__card {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 385px;
}

.benefits__icon {
  width: clamp(69px, 6.25vw, 100px);
  height: clamp(69px, 6.25vw, 100px);
  object-fit: contain;
}

.benefits__card-title {
  font-family: var(--font-family);
  font-weight: var(--font-weight-bold);
  line-height: 140%;
  padding: 24px 0;
}

.benefits__card-text {
  font-family: var(--font-family);
  font-weight: var(--font-weight-regular);
  font-size: clamp(16px, 1.5vw, 20px);
  line-height: 155%;
  color: var(--color-text);
}

.benefits__btn {
  font-family: var(--font-family);
  color: var(--color-white);
  background-color: var(--color-orange);
  font-size: clamp(14px, 1.4vw, 20px);
  padding: 10px 32px;
  margin: clamp(24px, 2.5vw, 40px) 0 clamp(24px, 2.5vw, 40px);
  line-height: 150%;
}

/* Cta */
.cta {
}

/* Gallery */
.gallery-slider {
  overflow: hidden;
  padding: clamp(40px, 8vw, 120px) 0 0;
}

.gallery-slider__wrapper {
  display: flex;
  flex-direction: column;
  gap: clamp(9px, 1.1vw, 15px);
}

.slider-track__horizontal,
.slider-track__vertical {
  display: flex;
  align-items: center;
  /*gap: clamp(12px, 1.39vw, 18px);*/
  width: max-content;
  will-change: transform;
  touch-action: pan-y;
}

.slide-top,
.slide-bottom {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  margin-right: clamp(9px, 1.1vw, 15px);
}

.slide-top {
  /*height: clamp(7.25rem, 16vw + 3rem, 16rem);*/
  height: clamp(7.5rem, 14vw + 3rem, 15rem);
}

.slide-bottom {
  /*height: clamp(10rem, 18vw + 4rem, 24rem);*/
  height: clamp(10rem, 22vw + 4rem, 24rem);
}

.slide-top img,
.slide-bottom img {
  height: 100%;
  width: auto;
  display: block;
  object-fit: cover;
}

/* Testimonials */
.testimonials {
  background-color: var(--color-text);
  padding-top: clamp(32px, 2.8vw, 40px);
  padding-bottom: clamp(32px, 2.8vw, 40px);
}

.testimonials__header {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: clamp(16px, 1.5vw, 24px);
  margin-bottom: clamp(24px, 3.8vw, 56px);
}

.testimonials__title {
  color: var(--color-white);
  margin-bottom: 10px;
}

.testimonials__subtitle {
  color: var(--color-white);
  display: block;
  text-align: center;
  width: 100%;
}

.testimonials__accent {
  color: var(--color-orange);
}

.testimonials__carousel {
  width: 100%;
  overflow: hidden;
}

.testimonials__card {
  background-color: rgba(249, 249, 239, 0.1);
  border-radius: 48px;
  padding: 32px;
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.testimonials__card--text {
  width: 290px;
}

.testimonials__card--photo-vertical {
  width: 400px;
}

.testimonials__card--photo-horizontal {
  width: 520px;
}

.testimonials__card-top {
  display: flex;
  flex-direction: row;
  gap: 24px;
  align-items: flex-start;
}

.testimonials__quote-icon {
  width: 24px;
  height: 24px;
  flex-shrink: 0;
}
/* ... */

